src/main/java/org/example/expert/config/error/InvalidRequestException.java
package org.example.expert.config.error;

public class InvalidRequestException extends RuntimeException {
    public InvalidRequestException(String message) {
        super(message);
    }
}
